# polyphony

./: .gitignore  AGENTS-CONTEXT.md  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md
arondo/: .gitignore  AGENTS-CONTEXT.md  README.md  next.config.ts  package-lock.json  package.json  server.ts
arondo/app/: globals.css  layout.tsx  page.tsx
arondo/components/: Terminal.tsx
arondo/lib/: event-bus.ts  pty-manager.ts  runner-manager.ts  runner-server.ts
arondo/runner/: .gitignore  build.macos.amd64.sh  build.macos.arm64.sh  build.sh  go.mod  main.go  pty.go
arondo/scripts/: run.dev.runner.sh  run.prod.runner.sh
infra/: README.md
infra/git/: .gitignore  blackwords.sample
itero/: .gitignore  AGENTS-CONTEXT.md  README.md  next.config.ts  package-lock.json  package.json  server.ts
itero/app/: globals.css  layout.tsx  page.tsx
itero/components/: Terminal.tsx
itero/controller/: go.mod  handler.go  handler_exec.go  handler_fs.go  handler_git.go  handler_pty.go  main.go  pty.go
itero/lib/: controller-manager.ts  controller-server.ts  event-bus.ts  pty-manager.ts  runner-manager.ts  store.ts  ws-server.ts
koishi/: AGENTS-CONTEXT.md  README.md  init.sh  init.yaml
koishi/mac/: run.sh  (+1 more)
qosmon/: .gcloudignore  .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh  run.build.sh  run.common.sh  run.deploy.sh  run.docker.sh  run.env.sh  run.local.sh  run.sh
qosmon/scripts/: generate.py  run.generate.sh
qosmon/src/: main.rs
scripts/: check-keywords-all.sh  check-keywords-for-commitmsgs.sh  check-keywords-for-files.sh  common.sh
umbilical/: README.md
(+687 files in other folders)
