[package]
name = "qosmon"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hickory-resolver = "0.24"
jsonpath_lib = "0.3"
chrono = "0.4"
anyhow = "1.0"
futures = "0.3"
regex = "1.10"
